--- a/app.css
+++ b/app.css
@@ -618,3 +618,35 @@ footer .content {
     left: 0;
   }
 }
+/* 
+404 ERROR PAGE */
+
+.error {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-content: center;
+  align-items: center;
+  max-width: 1400px;
+  margin: auto;
+  padding: 0 20px;
+}
+
+.error-text {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 10px;
+}
+
+@media screen and (max-width: 794px) {
+  .error {
+    grid-template-columns: 1fr;
+    max-width: 600px;
+  }
+
+  .error-text {
+    align-items: center;
+    text-align: center;
+  }
+}
